tests/hopix/typechecker/good/noarg.hopix
fun f (x : unit) : unit = f (nothing)

val test : unit = f (nothing)