tests/hopix/typechecker/bad/if4.hopix
val x = 3
val test : unit =
  if x = 0 then 0
